--- a/skatealura/picos.html
+++ b/skatealura/picos.html
@@ -22,8 +22,8 @@
     <nav class="menu-lateral">
         <img src="./img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
         <a href="index.html" class="menu-lateral__link menu-lateral__link--inicio">Início</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
-        <a href="#" class="menu-lateral__link menu-lateral__link--picos menu-lateral__link--ativo">Picos</a>
+        <a href="videos.html" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
+        <a href="picos.html" class="menu-lateral__link menu-lateral__link--picos menu-lateral__link--ativo">Picos</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
