--- a/skatealura/videos.html
+++ b/skatealura/videos.html
@@ -20,8 +20,8 @@
     </header>
     <nav class="menu-lateral">
         <img src="./img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
-        <a href="index.html" class="menu-lateral__link menu-lateral__link--inicio menu-lateral__link--ativo">Início</a>
-        <a href="videos.html" class="menu-lateral__link menu-lateral__link--videos">Vídeos</a>
+        <a href="index.html" class="menu-lateral__link menu-lateral__link--inicio">Início</a>
+        <a href="videos.html" class="menu-lateral__link menu-lateral__link--videos menu-lateral__link--ativo">Vídeos</a>
         <a href="picos.html" class="menu-lateral__link menu-lateral__link--picos">Picos</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--integrantes">Integrantes</a>
         <a href="#" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
@@ -38,11 +38,11 @@
                 <p class="cartao__perfil">Bruno Lopes</p>
                 <p class="cartao__info cartao__info--tempo">33 Minutos</p>
                 <p class="cartao__info cartao__info--visualizacao">33 Visualizações</p>
-                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+                <a href="video__destaque.html"><button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button></a>
             </div>
         </article>
         <article class="cartao cartao--recentes videos-recentes">
-            <h3 class="cartao__titulo">Videos Recentes</h3>
+            <h3 class="cartao__titulo">Favoritos</h3>
             <a href="#" class="cartao__link">Ver Todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
@@ -112,103 +112,5 @@
                 </div>
             </article>
         </section>
-
-        <article class="cartao cartao--recentes produtos-recentes">
-            <h3 class="cartao__titulo">Novas artes</h3>
-            <a href="#" class="cartao__link">Ver Todas</a>
-            <ul class="cartao__lista">
-                <li class="cartao__item">
-                    <img src="./img/miniaturaprod.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">Sem titulo 01</h4>
-                    <p class="cartao__item-perfil">Antonio Tebyriçá</p>
-                </li>
-                <li class="cartao__item">
-                    <img src="./img/miniaturaprod_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">Sem titulo 02</h4>
-                    <p class="cartao__item-perfil">Antonio Tebyriçá</p>
-                </li>
-                <li class="cartao__item">
-                    <img src="./img/miniaturaprod_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">Segurança</h4>
-                    <p class="cartao__item-perfil">Rafael Gibson</p>
-                </li>
-                <li class="cartao__item">
-                    <img src="./img/miniaturaprod_3.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">Malunguisse</h4>
-                    <p class="cartao__item-perfil">Carolina Canavarro</p>
-                </li>
-                <li class="cartao__item">
-                    <img src="./img/miniaturaprod_4.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">Coroa da converse</h4>
-                    <p class="cartao__item-perfil">Nikolas de Murtas</p>
-                </li>
-                <li class="cartao__item">
-                    <img src="./img/miniaturaprod_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">Segurança</h4>
-                    <p class="cartao__item-perfil">Rafael Gibson</p>
-                </li>
-                <li class="cartao__item">
-                    <img src="./img/miniaturaprod.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">Sem Titulo 03</h4>
-                    <p class="cartao__item-perfil">Antonio Tebyriçá</p>
-                </li>
-            </ul>
-        </article>
-
-        <article class="cartao cartao--destaque destaque-produtos">
-            <img src="./img/banner-mobile_2.png" alt="Banner Do Cartao" class="cartao__imagem cartao__imagem--mobile">
-            <img src="./img/banner_2.png" alt="Banner Do Cartao" class="cartao__imagem cartao__imagem--desktop">
-            <div class="cartao__conteudo">
-                <p class="cartao__destaque">Nova arte</p>
-                <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
-                <p class="cartao__perfil">Bruno Lopes</p>
-                <p class="cartao__info cartao__info--dolar">33,33</p>
-                <p class="cartao__info cartao__info--visualizacao">53 Visualizações</p>
-                <button class="cartao__botao cartao__botao--shop cartao__botao--destaque">Comprar agora</button>
-            </div>
-        </article>
-
-        <section class="secao secao-produtos">
-            <h3 class="titulo-secao">Camisas mais recentes</h3>
-            <article class="cartao cartao--destaque">
-                <img src="./img/produto_1.png" alt="Vídeo" class="cartao__imagem">
-                <div class="cartao__conteudo">
-                    <p class="cartao__perfil">André Soares</p>
-                    <h3 class="cartao__titulo">IBM</h3>
-                    <p class="cartao__info cartao__info--dolar">33,33</p>
-                    <button class="cartao__botao cartao__botao--shop" aria-label="Assistir agora"></button>
-                </div>
-            </article>
-            <article class="cartao cartao--destaque">
-                <img src="./img/produto_2.png" alt="Vídeo" class="cartao__imagem">
-                <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">Huflez Crew</h3>
-                    <p class="cartao__info cartao__info--dolar">33,33</p>
-                    <button class="cartao__botao cartao__botao--shop" aria-label="Assistir agora"></button>
-                </div>
-            </article>
-            <article class="cartao cartao--destaque">
-                <img src="./img/produto_3.png" alt="Vídeo" class="cartao__imagem">
-                <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Luiza Sampaio</p>
-                    <h3 class="cartao__titulo">Corujita Noturna</h3>
-                    <p class="cartao__info cartao__info--dolar">33,33</p>
-                    <button class="cartao__botao cartao__botao--shop" aria-label="Assistir agora"></button>
-                </div>
-            </article>
-            <article class="cartao cartao--destaque">
-                <img src="./img/produto_4.png" alt="Vídeo" class="cartao__imagem">
-                <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopes</p>
-                    <h3 class="cartao__titulo">GGG - Gatin G Gorro</h3>
-                    <p class="cartao__info cartao__info--dolar">33,33</p>
-                    <button class="cartao__botao cartao__botao--shop" aria-label="Assistir agora"></button>
-                </div>
-            </article>
-        </section>
-
     </main>
-    <script src="index.js"></script>
 </body>
-</html>
