--- a/alura+/index.html
+++ b/alura+/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <title>Alura Plus</title>
     <meta charset="UTF-8">
@@ -10,10 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <section class="container principal">
         <div class="container__caixa">
-            <h1 class = "container__titulo">Com o Combo+, você pode aproveitar a Alura+ 
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+
                 e o Alura Língua por um preço único.</h1>
             <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e do alura lingua" class="container__imagem">
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
@@ -26,13 +28,15 @@
         <img src="img/Plataformas.png" alt="Um Monitor e um Celular com o Alura Plus Aberto" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
+                aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
 
     <section class="container secundario">
         <div class="container__descricao">
-            <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos
+                de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
             <a href="www.alura.com.br" class="container__botao secundario__botao">Assine o Combo+</a>
         </div>
         <img src="img/Telas.png" alt="Tela da Alura+ e do alura lingua" class="secundario__imagem">
@@ -42,7 +46,8 @@
         <img src="img/Notebook.png" alt="Um Notebook com um curso do Alura plus aberto" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
-            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
         </div>
     </section>
 
@@ -90,8 +95,12 @@
             </li>
         </ul>
 
-        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
-        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de
+            assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
+            serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
+            Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
     </footer>
 </body>
+
 </html>
