--- a/Formação_HTML_CSS/7DaysOfCoding/index.html
+++ b/Formação_HTML_CSS/7DaysOfCoding/index.html
@@ -14,7 +14,7 @@
     <nav id = "nav-bar">
         <div class="nav-logo">
             <img class="img-logo" src="img/Logo.svg">
-            <h2>OptimusTech</h2>
+            <span>OptimusTech</span>
         </div>
 
         <ul class="nav-class">
@@ -30,5 +30,12 @@
             </div>
         </div>
     </nav>
+    <header>
+            <span class="about-us">Sobre Nós</span>
+            <h1>Por que somos diferentes?</h1>
+        <div class="container">
+            <p>Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+        </div>
+    </header>
 </body>
 </html>
