--- a/Formação_HTML_CSS/7DaysOfCoding/index.html
+++ b/Formação_HTML_CSS/7DaysOfCoding/index.html
@@ -37,5 +37,31 @@
             <p>Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
         </div>
     </header>
+    <section class="info-container">
+        <div id="info-div">
+            <h2 id="info-h2">400+</h2>
+            <span id="info-txt">Projetos Concluidos</span>
+            <p id="info-paragrafo">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+        </div>
+
+        <div id="info-div">
+            <h2 id="info-h2">100+</h2>
+            <span id="info-txt">Projetos Concluidos</span>
+            <p id="info-paragrafo">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+        </div>
+
+        <div id="info-div">
+            <h2 id="info-h2">20k</h2>
+            <span id="info-txt">Projetos Concluidos</span>
+            <p id="info-paragrafo">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+        </div>
+
+        <div id="info-div">
+            <h2 id="info-h2">500+</h2>
+            <span id="info-txt">Projetos Concluidos</span>
+            <p id="info-paragrafo">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+        </div>     
+
+    </section>
 </body>
 </html>
