--- a/Formação_HTML_CSS/7DaysOfCoding/index.html
+++ b/Formação_HTML_CSS/7DaysOfCoding/index.html
@@ -61,7 +61,12 @@
             <span id="info-txt">Projetos Concluidos</span>
             <p id="info-paragrafo">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
         </div>     
-
+    </section>
+    <section class="banner">       
+        <span>Vagas abertas!</span>
+        <h2>Estamos procurando por talentos</h2>
+        <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+        <img src="img/Banner.png" alt="">
     </section>
 </body>
 </html>
