Finalizada a seção de vagas

--- a/Formação_HTML_CSS/7DaysOfCoding/index.html
+++ b/Formação_HTML_CSS/7DaysOfCoding/index.html
@@ -68,5 +68,52 @@
         <p>Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
         <img src="img/Banner.png" alt="">
     </section>
+
+    <div class="vagas">
+
+        <span id="titulo-vagas">Design</span>
+
+        <div id="vaga">
+            <span id="titulo-vaga">Product Designer</span>
+            <div id="sobre-vaga">
+                <span id="tipo-vaga">Full-time</span>
+                <span id="salario-vaga">Faixa salarial: R$7.000</span>
+            </div>
+        </div>
+
+        <div id="vaga">
+            <span id="titulo-vaga">UX Designer</span>
+            <div id="sobre-vaga">
+                <span id="tipo-vaga">Full-time</span>
+                <span id="salario-vaga">Faixa salarial: R$6.000</span>
+            </div>
+        </div>
+
+        <span id="titulo-vagas">Desenvolvimento de Software</span>
+        
+        <div id="vaga">
+            <span id="titulo-vaga">Desenvolvedor(a) iOS</span>
+            <div id="sobre-vaga">
+                <span id="tipo-vaga">Full-time</span>
+                <span id="salario-vaga">Faixa salarial: R$8.000</span>
+            </div>
+        </div>
+
+        <div id="vaga">
+            <span id="titulo-vaga">Desenvolvedor(a) Front-end</span>
+            <div id="sobre-vaga">
+                <span id="tipo-vaga">Full-time</span>
+                <span id="salario-vaga">Faixa salarial: R$7.000</span>
+            </div>
+        </div>
+
+        <div id="vaga">
+            <span id="titulo-vaga">Desenvolvedor(a) Back-end</span>
+            <div id="sobre-vaga">
+                <span id="tipo-vaga">Full-time</span>
+                <span id="salario-vaga">Faixa salarial: R$8.000</span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
