Finalizada a Seção De FeedBack do Usuário

--- a/Formação_HTML_CSS/7DaysOfCoding/index.html
+++ b/Formação_HTML_CSS/7DaysOfCoding/index.html
@@ -115,5 +115,18 @@
             </div>
         </div>
     </div>
+
+    <section class="feedbacks">
+        <div class="feedback-txt">
+            <span>Veja o que nossos colaboradores falam sobre nós</span>
+            <h2>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+        </div>
+
+        <div class="feedback-user">
+            <img src="img/Avatar.png" alt="">
+            <h3>Júlia Castro</h3>
+            <span>Desenvolvedora Web</span>
+        </div>
+    </section>
 </body>
 </html>
